syntax = "proto3";

option go_package = "protoCompiles";

message blog_comment {
	int32   id = 1;
	int32   blog_id = 2;
	string  content  = 3;
	string  name  = 4;
	string	create_time = 5;
	string	update_time = 6;
}




