syntax = "proto3";

option go_package = "protoCompiles";

message blog_type {
	int32 id = 1;
	int32 blog_num = 2;
	string lable  = 3;
	string	create_time = 4;
	string	update_time = 5;
}




//protoc -I . --go_out=plugins=grpc:. ./tv_service.proto
